pihole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
  labels:
    app: pihole
spec:
  selector:
    matchLabels:
      app: pihole
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:2023.05.2
        ports:
        - name: web-http
          containerPort: 80
        - name: dns-tcp
          containerPort: 53
          protocol: TCP
        - name: dns-udp
          containerPort: 53
          protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /etc/pihole
        - name: dnsmasq-dot-d
          mountPath: /etc/dnsmasq.d
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: pihole-config
        - name: dnsmasq-dot-d
          persistentVolumeClaim:
            claimName: dnsmasq-dot-d
      restartPolicy: Always
