pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-console
  namespace: pihole
spec:
  selector:
    app: pihole
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: web-http
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  namespace: pihole
  annotations:
    metallb.universe.tf/loadBalancerIPs: 10.2.69.11
spec:
  selector:
    app: pihole
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - name: dns-tcp
    protocol: TCP
    port: 53
    targetPort: dns-tcp
  - name: dns-udp
    protocol: UDP
    port: 53
    targetPort: dns-udp
