pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-http-ingress
  namespace: pihole
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/app-root: /admin
spec:
  tls:
  - hosts:
    - saika.bukkake.cafe
    secretName: pihole-web-tls
  ingressClassName: nginx
  rules:
  - host: saika.bukkake.cafe
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole-console
            port:
              name: http
